--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
       "rootDir": "./src",
       "types": ["node"]
     },
-    "include": ["src/**/*.ts", "src/parquetjs-lite.d.ts"],
+    "include": ["src/**/*.ts", "src/parquetjs-lite.d.ts", "src/generateLargeJson.ts"],
     "exclude": ["node_modules"]
   }
   
